@@ -2,6 +2,8 @@
 v6.2.0-git
 ----------
 
+[mms] Ensure that viewing large mailboxes does not overload the session
+      storage size.
 [mms] Implement web notifications for new mail alerts.
 [mms] Add bare address information to title attribute in viewport on dynamic
       mailbox page
